--- a/bp_dp.tex
+++ b/bp_dp.tex
@@ -30,10 +30,14 @@
 
 \usepackage[
 backend=biber,
-style=phys,
+style=iso-numeric,
 sorting=ynt
 ]{biblatex}
 \addbibresource{citations.bib}
+
+%style=phys,
+
+%
 % -----------------------------------------------
 % Přepínač mezi bakalářskou a diplomovou prací, 
 % barevným a černobílým logem a mezi studentem a studentkou (vypracoval/vypracovala apod.)
