--- a/citations.bib
+++ b/citations.bib
@@ -1,7 +1,7 @@
 @misc{compounds,
 author       = {NIST},
 title     = {Atomic Weights and Isotopic Compositions for All Elements},
-note       = {\url{https://physics.nist.gov/cgi-bin/Compositions/stand_alone.pl}},
+url       = {https://physics.nist.gov/cgi-bin/Compositions/stand_alone.pl},
 urldate = {2023-11-2}, 
 language     = {english}
 
@@ -40,19 +40,60 @@ language     = {english}
 
 }
 
-@BOOK{Leo1987-wy, title = "Techniques for nuclear and particle physics experiments", author = "Leo, William R", year=1987}
+@BOOK{Leo1987-wy,
+title = "Techniques for nuclear and particle physics experiments: A how to approach", 
+author = "Leo, William R", 
+publisher = "Springer-Verlag",
+isbn = "9783540572800",
+location = "Berlin",
+year= 1987
+
+
+}
+
+
+@BOOK{Gilmore2008-jw,
+title = "Practical gamma-ray spectroscopy",
+author = "Gilmore, Gordon",
+publisher = "Wiley-Blackwell",
+location = "Chichester u.a.",
+edition = 2,
+month = apr,
+year = 2008,
+isbn = "9780470861967"
+}
+
+@BOOK{Lutz_2007,
+title="Semiconductor radiation detectors: Device physics", 
+publisher="Springer", 
+author="Lutz, Gerhad",
+location = "Berlin",
+isbn = "9783540716785",
+year=2007
+}
+
+
+@BOOK{ArtOfEl,
+title="The Art of Electronics, 3rd Edition", 
+publisher="Cambridge University Press", 
+author="Hill, Paul Horowitz and Winfield",
+location = "Cambridge",
+isbn = "0521809266",
+year=2015
+}
+
+
+
 
 @article{https://doi.org/10.1029/2003JE002138, author = {Klingelhöfer, G. and Morris, R. V. and Bernhardt, B. and Rodionov, D. and de Souza Jr., P. A. and Squyres, S. W. and Foh, J. and Kankeleit, E. and Bonnes, U. and Gellert, R. and Schröder, C. and Linkin, S. and Evlanov, E. and Zubkov, B. and Prilutski, O.}, title = {Athena MIMOS II Mössbauer spectrometer investigation}, journal = {Journal of Geophysical Research: Planets}, volume = {108}, number = {E12}, pages = {}, keywords = {Mössbauer spectroscopy, iron mineralogy, Mars, weathering, instrumentation, MIMOS II}, doi = {https://doi.org/10.1029/2003JE002138}, 
 }
 
-@BOOK{Gilmore2008-jw, title = "Practical gamma-ray spectroscopy", author = "Gilmore, Gordon", publisher = "Wiley-Blackwell", edition = 2, month = apr, year = 2008, address = "Hoboken, NJ", language = "en" }
 
-@BOOK{Lutz_2007, title="Semiconductor radiation detectors", publisher="Springer", author="Lutz, Gerhad", year=2007,language = "en" } 
 
-@misc{SiPINdirect,
+@online{SiPINdirect,
 author       = {Hamamatsu},
 title     = {Si detectors for high energy particles},
-note       = {\url{https://www.hamamatsu.com/content/dam/hamamatsu-photonics/sites/documents/99_SALES_LIBRARY/ssd/high_energy_kspd9002e.pdf}},
+url       = {https://www.hamamatsu.com/content/dam/hamamatsu-photonics/sites/documents/99_SALES_LIBRARY/ssd/high_energy_kspd9002e.pdf},
 urldate = {2023-12-26}, 
 language     = {english}
 }
@@ -88,62 +129,62 @@ author = {M.A. Mariscotti},
 abstract = {A computer method is described that permits automatic analysis of high resolution spectra, provided that the data are stored in a way suitable for computer input (i.e., on magnetic or paper tape). The program reads the entire spectrum, locates the peaks and determines their amplitudes, centroids and widths by least squares fitting. Doublets are handled automatically.}
 }
 
-@misc{betaBPW,
+@online{betaBPW,
 title     = {CERN DIY Particle Detector},
-note       = {\url{https://physicsopenlab.org/2020/06/15/cern-diy-particle-detector/}},
+url       = {https://physicsopenlab.org/2020/06/15/cern-diy-particle-detector/},
 urldate = {2023-12-26}, 
 language     = {english}
 }
 
-@misc{datS14605,
+@online{datS14605,
 author = {Hamamatsu},
 title     = {S14605},
-note       = {\url{https://www.hamamatsu.com/content/dam/hamamatsu-photonics/sites/documents/99_SALES_LIBRARY/ssd/s14605_kpin1091e.pdf}},
+url       = {https://www.hamamatsu.com/content/dam/hamamatsu-photonics/sites/documents/99_SALES_LIBRARY/ssd/s14605_kpin1091e.pdf},
 urldate = {2023-12-26}, 
 language     = {english}
 }
 
-@misc{datBPW34,
+@online{datBPW34,
 author = {Vishay Semiconductors},
 title     = {BPW34, BPW34S},
-note       = {\url{https://www.vishay.com/docs/81521/bpw34.pdf}},
+url       = {https://www.vishay.com/docs/81521/bpw34.pdf},
 urldate = {2023-12-26}, 
 language     = {english}
 }
-@misc{datOPF430,
+@online{datOPF430,
 author  = {TT Electronics},
 title     = {OPF430},
-note       = {\url{https://cz.mouser.com/datasheet/2/414/OPF430-3241495.pdf}},
+url       = {https://cz.mouser.com/datasheet/2/414/OPF430-3241495.pdf},
 urldate = {2023-12-26}, 
 language     = {english}
 }
 
-@misc{FrontEnd,
+@online{FrontEnd,
 author  = {Helmuth Spieler},
 institution  = {Lawrence Berkeley National Laboratory, Physics Division, Berkeley, CA 94720, U.S.A.},
 title     = {Front-End Electronics and Signal Processing},
-note       = {\url{https://www-physics.lbl.gov/~spieler/ICFA_Morelia/text/Front_End_Electronics_old.pdf}},
+url       = {https://www-physics.lbl.gov/~spieler/ICFA_Morelia/text/Front_End_Electronics_old.pdf},
 urldate = {2023-12-26}, 
 language     = {english}
 }
-@misc{Optimized,
+@online{Optimized,
 author = {Kouril, Lukas and Pechousek, Jiri and Kohout, Pavel and Jiruš, Marek and Schlattauer, Leo},
 year = {2021},
 month = {09},
 title = {Optimized conversion X-rays Mössbauer setup for efficient bulk sample surface analysis}
 }
 
-@misc{cr110,
+@online{cr110,
 author  = {Cremat Inc},
 title     = {CR-110-R2 charge sensitive preamplifier},
-note       = {\url{https://www.cremat.com/CR-110-R2.pdf}},
+url       = {https://www.cremat.com/CR-110-R2.pdf},
 urldate = {2023-12-26}, 
 language     = {english}
 }
-@misc{appCSPnote,
+@online{appCSPnote,
 author  = {Cremat Inc},
 title     = {Advice in using Cremat CSP modules},
-note       = {\url{https://www.cremat.com/applications/csp-application-notes/}},
+url       = {https://www.cremat.com/applications/csp-application-notes/},
 urldate = {2023-12-26}, 
 language     = {english}
 }
