--- a/citations.bib
+++ b/citations.bib
@@ -188,3 +188,11 @@ url       = {https://www.cremat.com/applications/csp-application-notes/},
 urldate = {2023-12-26}, 
 language     = {english}
 }
+@online{ORTECpreamp,
+author  = {ORTEC},
+title     = {Models 142A, 142B, and 142C Preamplifiers Operating and Service Manual},
+url       = {https://www.ortec-online.com/-/media/ametekortec/manuals/1/142abc-mnl.pdf},
+urldate = {2024-2-3}, 
+language     = {english}
+}
+
