--- a/detectors.tex
+++ b/detectors.tex
@@ -51,7 +51,7 @@ The semiconductors offer the best energy resolution and a very good efficiency, 
 \par
 The one problem with semiconductor detector is that there is no internal amplification, so the signals coming out of the detectors have to be strongly amplified by electronics.
 \par
-The semiconductors are small and compact. They also don't require high voltage sources and heavy pressure cylinders. These facts are crucial if it comes to making more compact Mössbauer spectrometers. The Mössbauer spectrometer MIMOS II \cite{https://doi.org/10.1029/2003JE002138} based on 4 Si PIN diodes was a part of two rowers Spirit and Opportunity and their mission on Mars. 
+The semiconductors are small and compact. They also don't require high voltage sources and heavy pressure cylinders. These facts are crucial if it comes to making more compact Mössbauer spectrometers. The Mössbauer spectrometer MIMOS II \cite{https://doi.org/10.1029/2003JE002138} based on 4 Si PIN diodes was a part of two rowers Spirit and Opportunity on their mission on Mars. 
 
 
 
