--- a/Semiconductors.tex
+++ b/Semiconductors.tex
@@ -132,7 +132,7 @@ Energy levels near the centre of band gap are primary responsible for recombinat
 One of the most important parameter is the size of the photosensitive area, which has to be large as possible for effective collection of radiation. This area has to be treated with extreme caution since every damage, adsorption of impurities or dew condensation due to the high environmental humidity reduces the active photosensitive area.
 
 \par
-Its obvious that for interactions inside the detector the most crucial dimensions are those, which are normal to the incident radiation.
+Its obvious that for the interactions inside the detector the most crucial layer dimensions are those, which are parallel to the direction of incident radiation - the thicknesses of P and I regions.
 The dead region (P) has to be thin as possible to reduce probability that the particle interacts in place where the generated charge cloud would nearly immediately recombine. The active depleted (I) layer has to be thick enough to make all the interactions happen inside itself. The schematic of PIN diode can be seen on fig. \ref{SiPIN}.
 
 
