--- a/bp_dp.tex
+++ b/bp_dp.tex
@@ -49,8 +49,10 @@ sorting=ynt
 % -----------------------------------------------
 % Údaje o práci – doplní se i do bibliografické identifikace, pouze v prohlášení je nutné vložit jméno vedoucího práce, které není v 1. pádě
 % -----------------------------------------------
-\newcommand{\nazevcz}{Vývoj spektrometrického řetězce pro detekci nízkoenergetického gama záření s využitím polovodičů.}
-\newcommand{\nazev}{Development of a spectrometric chain for the detection of low-energy gamma radiation using semiconductors.}
+\newcommand{\nazevcz}{Charakterizace polovodičových detektorů pro detekci gama záření a jejich aplikace v Mössbauerově
+spektroskopii.}
+\newcommand{\nazev}{Characterization of semiconductor detectors for gamma-rays detection and their application in Mössbauer
+spectroscopy.}
 \newcommand{\student}{Daniel Staník}
 \ifbakal%
   \newcommand{\program}{B0533A110007  Applied Physics}%
@@ -249,6 +251,18 @@ In~Olomouc~\today   \hfill\parbox[t]{6cm}{\centering\null\dotfill\\\student}
 \input{pulseAnalysis}
 
 \input{Algorytms}
+
+\input{PINtesting}
+
+\input{PCBconstruct}
+
+\input{PCBmeas}
+
+\input{MossMeas}
+
+
+
+
 
 
 % -----------------------------------------------
