--- a/citations.bib
+++ b/citations.bib
@@ -181,6 +181,15 @@ url       = {https://www.cremat.com/CR-110-R2.pdf},
 urldate = {2023-12-26}, 
 language     = {english}
 }
+@online{cr200,
+author  = {Cremat Inc},
+title     = {CR-200 Gaussian shaping amplifier},
+url       = {https://www.cremat.com/CR-200-R2.1.pdf},
+urldate = {2023-12-26}, 
+language     = {english}
+}
+
+
 @online{appCSPnote,
 author  = {Cremat Inc},
 title     = {Advice in using Cremat CSP modules},
@@ -195,4 +204,14 @@ url       = {https://www.ortec-online.com/-/media/ametekortec/manuals/1/142abc-m
 urldate = {2024-2-3}, 
 language     = {english}
 }
+@online{MCAOrtec,
+author  = {ORTEC},
+title     = {EASY-MCA-8K EASY-MCA-2K Digital Gamma-Ray Spectrometer User’s Manual},
+url       = {https://www.ortec-online.com/-/media/ametekortec/manuals/e/easy-mca-mnl.pdf},
+urldate = {2024-2-3}, 
+language     = {english}
+}
+
+
+
 
