--- a/detectors.tex
+++ b/detectors.tex
@@ -19,13 +19,13 @@ The Mössbauer spectrometer setups in laboratories of KEF are usually based on g
 \subsection{Gas proportional detectors}
 The gas detectors are usually tubes with electrodes filled with a special gas mixture. The incoming particle ionizes the gas, creating free ions and electrons.  According to the applied voltage, the gaseous detector can be operated in proportional regime, which is characterized by additional multiplication of charge carriers and thus, the signal can be amplified. The advantage of gaseous detectors is that they offer good energy resolution, but on the other hand their detection efficiency is low mainly due to the fact, that the gas density is small. Count rates are also affected by the long duration of the ionization effect. For operation they require high voltages (usually over 1000 V) and in case of flow counters they also require pressure cylinders along with other heavy equipment. 
 
-\begin{figure}[H]
- \centering
- \includegraphics[scale=0.55, angle = 0]{./pictures/GASdet.png}
- \caption{Toroidal proportional gas flow counter used in MS spectrometer \cite{Optimized}.}
- \label{toroid}
- 
-\end{figure}
+%\begin{figure}[H]
+% \centering
+% \includegraphics[scale=0.55, angle = 0]{./pictures/GASdet.png}
+% \caption{Toroidal proportional gas flow counter used in MS spectrometer \cite{Optimized}.}
+% \label{toroid}
+% 
+%\end{figure}
 
 
 \subsection{Scintillation detectors}
@@ -36,22 +36,11 @@ The detection efficiency is very high and due to the short duration of excitatio
 However, their energy resolution is much worse than in case of gases and semiconductors. The gamma spectra obtained this way usually have distorted wide peaks, which negatively affects Mössbauer spectrometry. The PMTs also cannot be employed inside the magnetic fields. 
 
 
-\begin{figure}[H]
- \centering
- \includegraphics[scale=0.35, angle = 0]{./pictures/NoPicture.jpg}
- \caption{Scintilator crystal coupled with PMT \cite{•}.}
- \label{PMT}
- 
-\end{figure}
-
-
 \subsection{Detectors based on semiconductors}
-The semiconductors offer the best energy resolution and a very good efficiency, however, they are usually expensive.
-
+The semiconductors offer the best energy resolution and a very good efficiency, however, they are usually more expensive than the other types of detectors. They can be used as direct radiation detectors (more often) or there is also a possibility to couple them with a scintillator crystal. 
 \par
-The one problem with semiconductor detector is that there is no internal amplification, so the signals coming out of the detectors have to be strongly amplified by electronics.
-\par
-The semiconductors are small and compact. They also don't require high voltage sources and heavy pressure cylinders. These facts are crucial if it comes to making more compact Mössbauer spectrometers. The Mössbauer spectrometer MIMOS II \cite{https://doi.org/10.1029/2003JE002138} based on 4 Si PIN diodes was a part of two rowers Spirit and Opportunity on their mission on Mars. 
+One problem with semiconductor detector is that there is no internal amplification, so the signals coming out of the detectors have to be strongly amplified by electronics.
+However, they are small and compact. They also don't require high voltage sources or heavy pressure cylinders to operate. These facts are crucial if it comes to making more compact Mössbauer spectrometers. The Mössbauer spectrometer MIMOS II \cite{https://doi.org/10.1029/2003JE002138} based on 4 Si PIN diodes was a part of two rowers Spirit and Opportunity on their mission on Mars. 
 
 
 
