--- a/citations.bib
+++ b/citations.bib
@@ -211,7 +211,13 @@ url       = {https://www.ortec-online.com/-/media/ametekortec/manuals/e/easy-mca
 urldate = {2024-2-3}, 
 language     = {english}
 }
-
+@online{SiCdTe,
+author  = {amptek},
+title     = {Si-PIN vs CdTe Comparison},
+url       = {https://www.amptek.com/internal-products/si-pin-vs-cdte-comparison},
+urldate = {2024-2-3}, 
+language     = {english}
+}
 
 
 
