--- a/pulseAnalysis.tex
+++ b/pulseAnalysis.tex
@@ -116,7 +116,7 @@ Charge preamplifiers are usually very sensitive devices and can be very easily d
 
 
 \subsection{Amplification}
-Since the output of preamplifier is in range of millivolts, it has to be strongly amplified. Very fast and low noise amplifier consisting of multiple opamps is an appropriate solution of this problem.
+Since the output of preamplifier is in order of millivolts, it has to be strongly amplified. Very fast and low noise amplifier consisting of multiple opamps is an appropriate solution of this problem.
 
 
 
