--- a/Semiconductors.tex
+++ b/Semiconductors.tex
@@ -5,10 +5,10 @@
 % -----------------------------------------------
 \chapter{Semiconductor detectors with p-n junction}
 % -----------------------------------------------
-The semiconductor structures has unique properties, which make them usable not only for a particle/photon detection. There are many types of semiconductor detectors - conventional detectors of light intensity with spectral range from infrared to UV - photoresistors and photodiodes, low intensities and single photons detectors - avalanche photodiodes (APDs), for imagining - CCD and CMOS cameras, x-ray, gamma and other particles rates and energy detectors - special photodiodes, for particle position and energy measurements - matrix drift and strip detectors. The essential role for gamma spectroscopy have the p-n junction detectors - detection diodes capable of capturing gamma photons with sufficient energy resolution and efficiency.
+The semiconductor structures has unique properties, which make them usable not only for a particle/photon detection. There are many types of semiconductor detectors - conventional detectors of light intensity with spectral range from infrared to UV - photoresistors and photodiodes, low intensities and single photons detectors - avalanche photodiodes (APDs), for imagining - CCD and CMOS cameras, x-ray, gamma and other particles rates and energy detectors - special photodiodes, for particle position and energy measurements - matrix drift and strip detectors. The essential role for gamma spectroscopy have the p-n junction detectors.
 
 \par
-To detect Mössbauer 14.4 keV gammas our primary choice are the Si PIN diodes for direct detection due to the guaranteed high detection efficiency under 25 keV. 
+To detect Mössbauer 14.4 keV gammas our primary choice are the Si PIN diodes for direct detection due to the high detection efficiency under 25 keV \cite{SiCdTe}. 
 
 \section{The Structure of semiconductor}
 Since we are not dealing with single atoms characterized by the well-known discrete energy levels, but with solid crystals, there is another  model describing the energy levels - the band structure. The energy levels are very close each other that they nearly form a continuum. This different behaviour is a result of a periodical potential inside the crystal lattice. However, the electron energy $E_{n}$ is not the only quantum number describing the behaviour of electrons inside the periodical potential. By solving Schrödinger equation with the help of so-called Bloch's theorem, we come to a conclusion that the second important quantum number is the wave vector $\vec{k}$. These two quantum numbers are bounded together by dispersion relations $E = E(\vec{k})$, which is characteristic for every crystal and may play role when it comes to transitions of electrons between bands.
@@ -62,19 +62,19 @@ For the purposes of design in electronic circuits, the detectors are usually mod
 The voltage across the depleted layer could be modelled as a simple plate capacitor. The capacitance of p-n junction plays a significant role - it alters the dynamical parameters of the detection circuits - it can alter the rising edges of pulses, alter the entire frequency spectra, increase/decrease the SNR. By varying the source voltage we vary this capacitance too.
 
 \par
-There is also one more problem with the diffusion of electron and holes which has to be considered. It is the diffusion of charge carriers from the $p$ and $n$ layers to the metal ohmic contacts on electrodes, which can form an unwanted electric field and a potential barrier across the contact. To prevent this from happening, the regions around the ohmic contacts are highly doped to reduce the potential barrier size. 
+%There is also one more problem with the diffusion of electron and holes which has to be considered. It is the diffusion of charge carriers from the $p$ and $n$ layers to the metal ohmic contacts on electrodes, which can form an unwanted electric field and a potential barrier across the contact. To prevent this from happening, the regions around the ohmic contacts are highly doped to reduce the potential barrier size. 
 
 
 \section{Detection mechanism}
 
 \par
-If we want to detect a particle or photon, is has to interact with the detector material - in semiconductor the creation of electron-hole pairs is observed. This could be achieved by interaction mechanisms described in previous chapters, which differ for every type of particle and energy. 
+If we want to detect a particle or photon, is has to interact with the detector material - in semiconductor the creation of electron-hole pairs is observed. This could be achieved by interaction mechanisms described in previous chapters, which differ for every type of particle and energy. In case of low-energy gamma the two main mechanisms which take place in producing the charge carriers are photo-effect and Compton scattering.
 
 \par
-The main of purpose of semiconductor as a detector, is to perform a linear conversion of the particle/photon energy into the free charge carriers - electrons in conduction band and holes in valence band. The average energy needed to create a single electron-hole pair is usually a fix constant - in Si it is $\epsilon = 3.6$ eV \cite{Lutz_2007}. Since the Si is an indirect semiconductor, this value is not equal to gap energy, which is lower ($E_{\textrm{g}} = 1.12$ eV). In case of low-energy gamma the two main mechanisms which take place in producing the charge carriers are photo-effect and Compton scattering. 
+The main of purpose of semiconductor as a detector, is to perform a linear conversion of the particle/photon energy into the free charge carriers - electrons in conduction band and holes in valence band. The average energy needed to create a single electron-hole pair is usually a fix constant - in Si it is $\epsilon = 3.6$ eV \cite{Lutz_2007}. Since the Si is an indirect semiconductor, this value is not equal to gap energy, which is lower ($E_{\textrm{g}} = 1.12$ eV).  
 
 \par
-The gamma photon striking the detector firstly interacts with a single electron. If the photo-effect takes its place, the primary electron with energy much higher than the thermal excitation will ionize the electrons from all over the valence band pushing them into higher states from conduction band. These Electrons in conduction band de-excite themselves into lower states of conduction band and the holes redistribute themselves to the upper states in valence band. This redistribution process releases energy again which leads to the cascade of further excitations and interactions, which produce many electron-hole pairs - the charge cloud. Number of generated electron-hole pairs $n$ is simply given by relation:
+The gamma photon striking the detector firstly interacts with a single electron. If the photo-effect takes its place, the primary electron with energy much higher than the thermal excitation will ionize the electrons from all over the valence band pushing them into higher states from conduction band. These Electrons in conduction band de-excite themselves into lower states of conduction band and the holes redistribute themselves to the upper states in valence band. This de-excitation process releases energy again and that leads to the cascade of further excitations and interactions, which produce many electron-hole pairs - the charge cloud. Number of generated electron-hole pairs $n$ is simply given by relation:
 
 
 \begin{equation}
@@ -82,7 +82,7 @@ n = \frac{E_{\textrm{gamma}}}{\epsilon}.
 \end{equation}
 
 \par
-In case of compton, the scattered photon may escape the detector without any other interaction taking the rest of its energy out of the detector. This results into energy distortion. The compton without any other interaction (compton again or photoeffect) is typical for thin detectors since there is insufficient thickness to stop the scattered photon again. In detected gamma energy spectrum this leads into compton continuum with the compton edge,which devaluates the spectra.
+In case of Compton scattering, the scattered photon may escape the detector without any other interaction taking the rest of its energy out of the detector. This results into energy distortion. The Compton without any other interaction (Compton again or photoeffect) is typical for thin detectors since there is insufficient thickness to stop the scattered photon again. In detected gamma energy spectrum this leads into the Compton continuum with the compton edge, which devaluates the spectra.
 
 \par
 An ideal very thick detector could solve this problem, because every possible interaction and all the following sub-interactions will happen inside the detector and will result into electron-hole generation. The detector of this kind would have only the full energy peaks without any other unwanted counts. However, construction of such detector is impossible due to the many technical and manufacturing problems arising with increasing dimensions. 
@@ -116,8 +116,7 @@ It was mentioned that the electrons can be also excited by thermal fluctuations.
 
 \par
 The thermal fluctuations are much more significant for materials which require less energy to excite the electrons to the conduction band such as Ge. These detectors always have to be operated at low temperatures. Even the room temperature can lead up to the breakdown and destruction of a detector. For Si, the valence and conduction band are more distant. so the thermal fluctuations are not so critical.
-\par
-However the applied bias voltage in reverse direction usually also increases the dark current.
+However, the applied bias voltage in reverse direction also increases the dark current.
 
 
 \subsection{Recombination and trapping}
@@ -178,7 +177,7 @@ OPF430 is originally ment to be a low-cost detector for fiber optic applications
 Parameters \cite{datOPF430}:
 \begin{itemize}
 \item Maximum reverse voltage $U_\textrm{R}$: 100 V
-\item Photosensitive area: not specified, small
+\item Photosensitive area: not specified, <value
 \item Capacitance: 1.5  pF at $U_\textrm{R} = 5$ V
 \item Dark current: 0.1 nA at $U_\textrm{R} = 5$ V
 \item Depletion layer: not specified
@@ -205,7 +204,7 @@ Parameters \cite{datBPW34}:
 \item Capacitance: 25 pF at $U_\textrm{R} = 3$ V
 \item Dark current: 2 nA at $U_\textrm{R} = 10$ V
 \item Depletion layer: not specified
-\item Cost: 30 CZK
+\item Cost: 11 CZK
 \end{itemize}
 
 \begin{figure}[H]
